# vicare-template

./: .gitignore  ANNOUNCE  Makefile.am  README  acinclude.m4  configure.ac  configure.sh
doc/: Makefile.am  macros.texi  vicare-template.texi
lib/: Makefile.am  compile-all.sps  compile-nausicaa.sps  dependencies.make  features.c  libraries.scm
lib/nausicaa/category/: template.vicare.sls
lib/vicare/: template.sls
lib/vicare/category/: template.sls  template.vicare.sls
lib/vicare/category/template/: constants.sls.in  constants.vicare.sls.in  unsafe-capi.sls  unsafe-capi.vicare.sls
lib/vicare/template/: unsafe-capi.sls
meta/autoconf/: vicare.m4
meta/git/: config
meta/makefiles/: lib.am
meta/scripts/: vicare-template-process-functions
src/: Makefile.am  vicare-template-core.c  vicare-template-internals.h  vicare-template-version.c
tests/: Makefile.am  demo-for-documentation.sps  demo-for-nausicaa-documentation.sps  demo-for-plain-documentation.sps  test-nausicaa-template.sps  test-vicare-template.sps
